components/ckcp/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: ckcp
  name: ckcp
