components/ckcp/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ckcp
  labels:
    app: kcp-in-a-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kcp-in-a-pod
  template:
    metadata:
      labels:
        app: kcp-in-a-pod
    spec:
      containers:
        - name: kcp
          image: ghcr.io/kcp-dev/kcp:v0.8.0
          ports:
            - containerPort: 6443
          command:
            - /kcp
          args:
            - start
            - --auto-publish-apis=true
            - --tls-private-key-file=/etc/kcp/tls/server/tls.key
            - --tls-cert-file=/etc/kcp/tls/server/tls.crt
            - --requestheader-client-ca-file=/etc/kcp/tls/requestheader-client/ca.crt
            - --requestheader-username-headers=X-Remote-User
            - --requestheader-group-headers=X-Remote-Group
            - --root-directory=/etc/kcp/config
            - --run-virtual-workspaces=true
            - --external-hostname=$(EXTERNAL_HOSTNAME):443
            - --v=2
          resources:
            limits:
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 178Mi
          volumeMounts:
            - name: kcp-certs
              mountPath: /etc/kcp/tls/server
            - name: kcp-requestheader-client-ca
              mountPath: /etc/kcp/tls/requestheader-client
            - name: kubeconfig
              mountPath: /etc/kcp/config
      volumes:
        - name: kcp-certs
          secret:
            secretName: kcp-cert
        - name: kcp-requestheader-client-ca
          secret:
            secretName: kcp-requestheader-client-ca
            items:
              - key: ca.crt
                path: ca.crt
        - name: kubeconfig
          persistentVolumeClaim:
            claimName: kcp
