components/ckcp/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ckcp
  labels:
    app: kcp-in-a-pod
spec:
  ports:
    - name: kcp
      protocol: TCP
      port: 6443
      targetPort: 6443
  selector:
    app: kcp-in-a-pod
