components/ckcp/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ckcp
  namespace: ckcp
spec:
  to:
    kind: Service
    name: ckcp
  port:
    targetPort: kcp
  tls:
    termination: passthrough
